samples/_failures_safe/1761172771_fd3d47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_244a8dca.c: In function ‘tokenize’:
./samples/SAFE/__tmp_244a8dca.c:164:9: error: expected expression at end of input
  164 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_244a8dca.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_244a8dca.c:164:9: error: expected declaration or statement at end of input
